# rki-vaccination-scraper

./: .gitignore  Makefile  README.md  datapackage.json  package.json  pipeline-spec.yaml  pyproject.toml  requirements.txt  vaccination.py  vercel.json
.github/: FUNDING.yml
.github/workflows/: main.yml
.vuepress/: config.js
.vuepress/components/: ToggleDarkMode.vue
api/: requirements.txt  server.py  v1.py
data/: datapackage.json  de-population-current.csv  de-vaccinations-current.csv  de-vaccinations-raw-indikation.csv  de-vaccinations-raw-quote.csv  de-vaccinations-raw-quote.schema.yaml  de-vaccinations-raw-totals.csv  de-vaccinations-raw-totals.schema.yaml  de-vaccinations.csv
docs/: ios-scriptable-widget.js  rki-version-migration.md
flows/: insert_date.py  insert_geotype.py  quote.py  set_primary_key.py  update_resource_date.py
