[tool.poetry]
name = "rki-vaccination-scraper"
version = "0.1.0"
description = ""
authors = ["Thorben Westerhuys <thorben.westerhuys@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
goodtables = "^2.5.2"
datapackage-pipelines = "^2.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
